# VadimPFinGrab

./: .env.example  .gitignore  IMPLEMENT_CLAUDE_CODE_LLM_PROVIDER.md  Makefile  PIPELINE_LOGIC.md  PLAN_e-disclosure_parser_v2.md  PLAN_self_evolution.md  README.md  TZ_e-disclosure_extractor.md  USER_GUIDE.md  e-disclosure-companies.csv  pyproject.toml
.claude/: settings.evolve.json
config/: app.yaml  event_types.yaml  llm.yaml  metrics.yaml  metrics.yaml.template  ocr.yaml  tickers.yaml  tickers.yaml.template
deploy/: DEBUG_EVOLVE_PROMPT.md  PILOT_REPORT_template.md  PRODUCTION_ENABLE.md  env.evolve.example  install_claude_code.sh
evolution/: MEMORY.md
new_info/: https___www.e-disclosure.ru_portal_files.aspx_id=3043&type=2.html
prompts/: README.md  prompt_01_scaffolding.md  prompt_02_configuration.md  prompt_03_state_db.md  prompt_04_http_discoverer.md  prompt_05_downloader_unpacker.md  prompt_06_pdf_classifier.md  prompt_07_text_extractor.md  prompt_08_llm_provider.md  prompt_09_metric_extractor.md  prompt_10_event_extractor.md  prompt_11_validator.md  prompt_12_writer_excel.md  prompt_13_google_drive.md  prompt_14_orchestrator_cli.md  prompt_15_scheduling_acceptance.md  prompt_16_discoverer_real_html.md  prompt_17_publications_period_columns.md  prompt_18_per_page_classification.md  prompt_19_bank_nonbank_profiles.md  prompt_20_top50_tickers.md  prompt_21_issuer_report_source.md  prompt_22_cosmetic_docs.md  prompt_23_playwright_backend.md  prompt_29_hybrid_pdf_text_path.md  prompt_30_balance_anchor_trim.md  prompt_31_tesseract_quality.md  prompt_32_period_parser_extensions.md  prompt_33_vision_fallback.md  prompt_34_full_vision_per_ticker.md  (+12 more)
(+229 files in other folders)
